without-modules/c4-02-vpc-resource.tf
resource "aws_vpc" "jenkins" {
  cidr_block = var.vpc_cidr
  enable_dns_support = var.enable_dns_support
  enable_dns_hostnames = var.enable_dns_hostnames
  tags = {
    Name = "jenkins"
  }
}
